--- a/index.html
+++ b/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="zh-Hant">
 <head>
 	<meta charset="UTF-8">
-	<title>My Front End Starter Kit</title>
-	<link rel="stylesheet" type="text/css" href="./dist/bower_components/bootstrap/dist/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="./dist/css/main.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Document</title>
 </head>
-
 <body>
-	<h1>My Front End Starter Kit</h1>
-	<p>
-		<h2>Hello, World!</h2>
-	</p>
-	<img src="./dist/img/front-end-kids.png">
-	<script type="text/javascript" src="./dist/js/bundle.js"></script>
+	<h1>Hello World</h1>
+	<script>
+		location.href = "dist/index.html";
+	</script>
 </body>
-
 </html>
