--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-TW">
   <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css"/>
   </head>
   <body>
-    <h1>My Front End Starter Kit</h1><img class="card" src="img/front-end-kids.png"/>
+    <h1 class="text-red">My Front End Starter Kit</h1><img class="card-rotate" src="img/front-end-kids.png"/><img src="img/skill-tree.jpg"/>
+    <script src="js/vendors.js"></script>
     <script src="js/all.js"></script>
   </body>
 </html>
